<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_modal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rateLabel"
                style="@style/DetailSubTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:text="@string/student_review_rate_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ambitionLabel"
                style=" @style/RateStudentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="34dp"
                android:labelFor="@+id/ambitionRatingBar"
                android:text="@string/student_review_ambition"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rateLabel"/>

            <com.undabot.jobfair.core.view.CustomRatingBar
                android:id="@+id/ambitionRatingBar"
                style="@style/RatingBar.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/ambitionLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintTop_toTopOf="@+id/ambitionLabel"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/socialSkillsLabel"
                style="@style/RateStudentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:labelFor="@+id/socialSkillsRatingBar"
                android:text="@string/student_review_social_skills"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ambitionLabel"/>

            <com.undabot.jobfair.core.view.CustomRatingBar
                android:id="@+id/socialSkillsRatingBar"
                style="@style/RatingBar.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/socialSkillsLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintTop_toTopOf="@+id/socialSkillsLabel"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/technicalSkillLabel"
                style="@style/RateStudentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:labelFor="@+id/technicalSkillsRatingBar"
                android:text="@string/student_review_technical_skills"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/socialSkillsLabel"/>

            <com.undabot.jobfair.core.view.CustomRatingBar
                android:id="@+id/technicalSkillsRatingBar"
                style="@style/RatingBar.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/technicalSkillLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintTop_toTopOf="@+id/technicalSkillLabel"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/notesLabel"
                style="@style/DetailSubTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:labelFor="@+id/notesInput"
                android:text="@string/student_review_notes_about_the_student"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/technicalSkillLabel"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/notesInput"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_rectangle"
                android:gravity="top"
                android:hint="@string/assistance_hint"
                android:minHeight="200dp"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notesLabel"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:enabled="false"
                android:text="@string/student_review_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notesInput"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>